--- a/config.json
+++ b/config.json
@@ -1,22 +1,19 @@
 {
 	"behavior": {
-		"tokenReserveFraction": 0.1,
-		"swapSlippageTolerance": 0.01,
-		"gasLimit": 250000,
-		"swapGasPrice": 3.21
+		"tokenReserveFraction": 0.05,
+		"swapSlippageTolerance": 0.01
 	},
 	"networks": {
 		"fantom": {
 			"url": "https://rpc.ftm.tools/",
 			"chainId": 250,
 			"symbol": "FTM",
-			"scanAPI": "https://api.ftmscan.com/"
-		}
-	},
-	"DEX": {
-		"sushiswap": {
-			"factory": "0xc35DADB65012eC5796536bD9864eD8773aBc74C4",
-			"router": "0x1b02dA8Cb0d097eB8D57A175b88c7D8b47997506"
+			"scanAPI": "https://api.ftmscan.com/",
+			"DEX": {
+				"sushiswap": {
+					"router": "0x1b02dA8Cb0d097eB8D57A175b88c7D8b47997506"
+				}
+			}
 		}
 	},
 	"pools": [
@@ -28,7 +25,7 @@
 			"pid": 1,
 			"DEX": "sushiswap",
 			"hasFees": true,
-			"swapSlippageTolerance": 0.1
+			"swapSlippageTolerance": 0.06
 		}
 	]
 }
